Added MDC population via Annotation and AOP
Also  improved RateLimit annotation with Enums.

Added Log Format to include MDC (To be Improved to recover colors)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   application:
     name: ggauth
 
+
 server:
   port: 8080
 
@@ -36,3 +37,6 @@ management:
     web:
       exposure:
         include: health,info,prometheus
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%X] %logger{36} - %msg %n"
